# GostEditor

./: README.md  run-dev.ps1
.github/workflows/: ci.yml
.opencode/plans/: fix-folder-expansion-and-theme.md
gost-editor/: .gitignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
gost-editor/.cargo/: config.toml
gost-editor/src/: App.tsx  main.tsx
gost-editor/src-tauri/: Cargo.toml  tauri.conf.json
gost-editor/src-tauri/capabilities/: default.json
gost-editor/src-tauri/src/: lib.rs  main.rs
gost-editor/src/__tests__/: setup.test.ts
gost-editor/src/components/editor/: CodeEditor.module.css  CodeEditor.tsx  EditorArea.module.css  EditorArea.tsx  EmptyEditor.module.css  Minimap.module.css  Minimap.tsx
gost-editor/src/components/layout/: EditorShell.module.css  EditorShell.tsx  MenuBar.module.css  MenuBar.tsx  StatusBar.module.css  StatusBar.tsx  TitleBar.module.css  TitleBar.tsx
gost-editor/src/components/panels/: RightPanel.module.css  RightPanel.tsx
gost-editor/src/components/sidebar/: FileTree.module.css  FileTree.tsx  SearchPanel.module.css  SearchPanel.tsx
gost-editor/src/components/terminal/: Terminal.module.css  Terminal.tsx
gost-editor/src/components/ui/: CommandPalette.module.css  CommandPalette.tsx  ContextMenu.tsx  GoToLine.tsx
gost-editor/src/store/: editorCommands.ts  editorStore.ts  openFile.ts  openFolder.ts
gost-editor/src/styles/: global.css  variables.css
