[package]
name = "gost-editor"
version = "0.1.0"
description = "Gost Editor - A lightweight code editor for Gost Framework"
authors = ["you"]
edition = "2021"

[lib]
name = "gost_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
